Suggested framework for problem and proposed solution sections of report.

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "# Abstract (130 words)\n",
-    "Is it possible to design an AI algorithm that behaves similar to human players ranging from beginning to master for the simple-styled Shanghai mahjong? The data used represents training data by simulations and measures the skill expression of our agent given a starting hand. Our environment is used to guide the AI algorithm how to behave as an agent with a goal to win but with differentiating skill levels. The performance level is measured by playing alone, against other players and an oracle agents to reach the intended state of play. Though the original standard for the AI algorithm was not met, the process of designing a purposeful mahjong environment, reward prediction algorithm, functionable agent, and monte carlo algorithm allowed for discoveries of efficiencies, and reasonable simplifications for runtime/feasibility."
+    "Is it possible to design an AI algorithm that behaves similar to human players ranging from beginning to master for the simple-styled Shanghai mahjong? The data used represents training data by simulations and measures the skill expression of our agent given a starting hand. Our environment is used to guide the AI algorithm how to behave as an agent with a goal to win but with differentiating skill levels. The performance level is measured by playing alone, against other players and against oracle agents to reach the intended level of skill. Though the original standard for the AI algorithm was not met, the process of designing a purposeful mahjong environment, reward prediction algorithm, functionable agent, and monte carlo algorithm allowed for discoveries of efficiencies, and reasonable simplifications for runtime/feasibility."
    ]
   },
   {
@@ -79,6 +79,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem of playing Mahjong can be split into two main sub-problems: deciding what tiles to pick up (that is, whether to pong or chow if possible) and deciding which tile to discard. A fully-developed agent will have learned how to do both, but for the purposes of development we found it best to train an agent on only one at a time. Of the two, the decision of what tiles to pick up can be made easily using simple, relatively effective heuristics derived from domain knowledge, so we decided to train an agent to decide which tiles to discard."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Proposed Solution\n",
     "\n",
@@ -87,6 +99,49 @@
     "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
     "\n",
     "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ways of encoding state space:\n",
+    "* Lists of hand and discard piles for each player, containing Tile objects (mahjong.py)\n",
+    "    * Easiest to implement game logic\n",
+    "* Vector encoding: position = tile type, value = number of tiles (agent.py)\n",
+    "    * Vector for each player's hand and for the discard pile, combined in matrix or flattened matrix\n",
+    "    * Ideal input for neural network\n",
+    "    * Should be possible to implement full game logic using this encoding, which would likely make things faster, but have not done so\n",
+    "* Sam's encoding - non-functional, probably shouldn't be discussed in any real detail\n",
+    "\n",
+    "Ways of encoding action space:\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Approaches to training agent:\n",
+    "* Monte Carlo value estimates (reward_prediction.py)\n",
+    "* Monte Carlo control\n",
+    "* Oracle agent (agent.py) - supplemental method, can be used to accelerate learning (oracle agent still has to be trained)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementation details:\n",
+    "* All agents implemented in PyTorch\n",
+    "    * Currently Ryota's only has the model implemented in PyTorch, but this should be easily changed\n",
+    "    * Advantage of having agent implemented in PyTorch, not just model: can shift entire agent to `device`, minimizing accidental cross-device computations (which raise errors)\n",
+    "* Ideal implementation for vector encoding also in PyTorch to reduce computational overhead from creating new tensors\n",
+    "* Implementation of Monte Carlo control based on implementation learned in class\n",
+    "* Implementation of oracle agent based on article [I forgot which article this is]\n",
+    "* Implementation of game mechanics, heuristics:\n",
+    "    * We have multiple somewhat different implementations for this, and should probably at least try to standardize them for the sake of presenting a consistent narrative and making it seem like one group project instead of multiple individual projects.\n",
+    "* "
    ]
   },
   {
@@ -190,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11 (default, Jul 27 2021, 07:03:16) \n[Clang 10.0.0 ]"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
@@ -213,5 +268,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
