--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -81,7 +81,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The general problem we are solving is winning the game of Mahjong. There are many different versions of Mahjong, which vary mainly in the system used to score winning hands, so the specific problem we are trying to solve is forming a winning hand; once this can be done, it will provide a general solution to the problem of winning any given game of Mahjong, which can be improved by further training under a given ruleset.  \n",
+    "  \n",
+    "The mechanics of a single round of Mahjong, ignoring the complicated scoring system, are relatively simple, highly standardized, and easily simulated. The mechanical properties of a given tile are wholly determined by its identity and its location, both of which can be represented as discrete variables with finite, immutable ranges, and specifying these values for a fixed set of tiles and the identity of the current player satisfies the Markov property for a round of mahjong. The rules for player actions (which are discrete and deterministic) and for terminating a round and deciding who won it are also relatively simple, and while converting them into a computer program is not the easiest of tasks, it is quite feasible. This means that it is feasible to create a perfectly accurate digital simulation of a round of Mahjong, allowing for Monte Carlo-style reinforcement learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Mechanics of Problem\n",
+    "For the version of Shanghai Mahjong we are using, there are 34 types of tiles: numbers 1-9 for each of three suits, and 7 unnumbered honor suits. The numbered tiles can be combined into runs of three (e.g. 3, 4, 5) of the same suit, and all tiles can be combined into sets of two- or three-of-a-kind. Each player has a hand of 13 tiles, to which one is added at the start of their turn and one removed at the end; if after adding a tile, a player's hand consists of 4 runs or sets of 3 (including a combination of runs and sets) and one set of two, that player wins. When a tile is discarded, each player who did not discard it has a chance, in turn order, to take it and form a set of three, and if none do so, the next player can take it and form a run; if any of these things happen, the set or run formed with the discarded tile cannot be broken (tiles in it cannot be discarded or used in other sets or runs). If none of these occur, or it is the first round of the game, the next player draws a tile from the wall. When a player takes a tile, it becomes their turn regardless of whether they were next in line. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11 (default, Jul 27 2021, 07:03:16) \n[Clang 10.0.0 ]"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
@@ -264,5 +276,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
